--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@mantine/core": "^4.1.4",
     "@mantine/hooks": "^4.1.4",
     "@mantine/next": "^4.1.4",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next": "^12.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-pageflip": "^2.0.3",
     "react-spring": "^9.4.4",
     "use-sound": "^4.0.1"
